Refactor CSS and Svelte components for toast notifications and styling

--- a/src/app.css
+++ b/src/app.css
@@ -23,3 +23,19 @@ body {
 a {
 	text-decoration: none;
 }
+
+.alert-add-to-cart {
+	--alert-bg: var(--primary);
+	color: var(--whiteish);
+	border-color: var(--primary);
+}
+
+.alert-wishlist {
+	--alert-bg: var(--light-accent);
+	color: var(--dark);
+	border-color: var(--light-accent);
+}
+
+.toast:where(.toast-top) {
+	top: 50px;
+}
