--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--dark: rgb(38, 38, 38);
+	--whiteish: #f0f0f0; /* White */
+	--primary: #3f594b; /* Dark Green */
+	--secondary: #2a9d8f; /* Light Green */
+	--dark-primary: #2a3c32; /* Darker Green */
+	--accent: #e9c46a; /* Yellow */
+	--light-accent: #f7eaca; /* Light Yellow */
+	--secondary-accent: #f4a261; /* Orange */
+	--dark-secondary-accent: #e76f51; /* Dark Orange */
+	--main-red: #e63946; /* Red */
+}
 body {
 	min-height: 100vh;
 	margin: 0;
